Fix property extra paren

--- a/robotpy_build/templates/gen_pybind11.cpp.j2
+++ b/robotpy_build/templates/gen_pybind11.cpp.j2
@@ -135,7 +135,7 @@
     ("{{ prop.x_name }}", {{ ' ' }}
         [](const {{ qualname }}& inst) -> {{ prop.type }} { return inst.{{ prop.name}}; }
         {%- if not (prop.constant or prop.constexpr or prop.x_readonly) %},
-        []({{ qualname }}& inst, {{ prop.type }} v) {inst.{{ prop.name}} = v; })
+        []({{ qualname }}& inst, {{ prop.type }} v) {inst.{{ prop.name}} = v; }
         {%- endif -%}
     )
 
