Add keep_alive support for references passed to constructors

--- a/robotpy_build/templates/gen_pybind11.cpp.j2
+++ b/robotpy_build/templates/gen_pybind11.cpp.j2
@@ -104,6 +104,10 @@
     , release_gil()
   {%- endif -%}
 
+  {%- for nurse, patient in fn.x_keepalives %}
+    , py::keep_alive<{{ nurse }}, {{ patient }}>()
+  {%- endfor -%}
+
   {{- fn.x_return_value_policy -}}
 
   {%- if fn.x_doc %},
